--- a/index.html
+++ b/index.html
@@ -37,112 +37,113 @@
         </div>
     </nav>
 
-<!--    <div class="row slide slide1">-->
-<!--        <div class="row slide1__main">-->
-<!--            <div class="col-lg-4 offset-lg-2 main__text">-->
-<!--                         <h2 class="text1__header big-header">Your next interactive experience</h2>-->
-<!--                         <button class="text1__button">-->
-<!--                            <span class="button-text button1__text button1__text_position">Hire us-->
-<!--                                <svg class="text-svg" xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 8 8"> <path d="M5 0v2h-5v1h5v2l3-2.53-3-2.47z" transform="translate(0 1)" fill="#fff" /> </svg>-->
-<!--                            </span>-->
-<!--                         </button>-->
-<!--                     </div>-->
-<!--            <div class="col-lg-6">-->
-<!--                         <img src="img/bigAstronaut.png" alt="astronaut" class="image">-->
-<!--                     </div>-->
-<!--        </div>-->
-<!--        <div class="row slide1__extra">-->
-<!--            <div class="col-lg-3 offset-lg-2">-->
-<!--                        <div class="extra1__link">-->
-<!--                            <h3 class="link1__header min-header">-->
-<!--                                Metiew&Smith-->
-<!--                            </h3>-->
-<!--                            <p class="link1__description">-->
-<!--                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do-->
-<!--                            </p>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--            <div class="col-lg-3">-->
-<!--                <div class="extra1__link">-->
-<!--                            <h3 class="link1__header min-header">-->
-<!--                                Fantasy interactive-->
-<!--                            </h3>-->
-<!--                            <p class="link1__description">-->
-<!--                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do-->
-<!--                            </p>-->
-<!--                        </div>-->
-<!--            </div>-->
-<!--            <div class="col-lg-3">-->
-<!--                <div class="extra1__link">-->
-<!--                    <h3 class="link1__header min-header">-->
-<!--                                Paul&Shark-->
-<!--                            </h3>-->
-<!--                    <p class="link1__description">-->
-<!--                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do-->
-<!--                            </p>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
+    <div class="row slide slide1">
+        <div class="row slide1__main">
+            <div class="col-lg-4 offset-lg-2 main__text">
+                         <h2 class="text1__header big-header">Your next interactive experience</h2>
+                         <button class="text1__button">
+                            <span class="button-text button1__text button1__text_position">Hire us
+                                <svg class="text-svg" xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 8 8"> <path d="M5 0v2h-5v1h5v2l3-2.53-3-2.47z" transform="translate(0 1)" fill="#fff" /> </svg>
+                            </span>
+                         </button>
+                     </div>
+            <div class="col-lg-6">
+                         <img src="img/bigAstronaut.png" alt="astronaut" class="image">
+                     </div>
+        </div>
+        <div class="row slide1__extra">
+            <div class="col-lg-3 offset-lg-2">
+                        <div class="extra1__link">
+                            <h3 class="link1__header min-header">
+                                Metiew&Smith
+                            </h3>
+                            <p class="link1__description">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                            </p>
+                        </div>
+                    </div>
+            <div class="col-lg-3">
+                <div class="extra1__link">
+                            <h3 class="link1__header min-header">
+                                Fantasy interactive
+                            </h3>
+                            <p class="link1__description">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                            </p>
+                        </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="extra1__link">
+                    <h3 class="link1__header min-header">
+                                Paul&Shark
+                            </h3>
+                    <p class="link1__description">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                            </p>
+                </div>
+            </div>
+        </div>
+    </div>
 
-<!--    <div class="row slide slide3">-->
-<!--        <div class="row slide3__main">-->
-<!--            <div class="col-lg-4 offset-lg-2 main__text">-->
-<!--                <h2 class="text3_header big-header">We<br>believe in passionate people</h2>-->
-<!--                <span class="button-text button3__text">Career-->
-<!--                        <svg class="button3__svg text-svg" xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 8 8"> <path d="M5 0v2h-5v1h5v2l3-2.53-3-2.47z" transform="translate(0 1)" fill="#fff" /> </svg>-->
-<!--                    </span>-->
-<!--            </div>-->
-<!--            <div class="col-lg-6">-->
-<!--                <img src="img/person.png" alt="person" class="image">-->
-<!--            </div>-->
-<!--        </div>-->
+    <div class="row slide slide3">
+        <div class="row slide3__main">
+            <div class="col-lg-4 offset-lg-2 main__text">
+                <h2 class="text3_header big-header">We<br>believe in passionate people</h2>
+                <span class="button-text button3__text">Career
+                        <svg class="button3__svg text-svg" xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 8 8"> <path d="M5 0v2h-5v1h5v2l3-2.53-3-2.47z" transform="translate(0 1)" fill="#fff" /> </svg>
+                    </span>
+            </div>
+            <div class="col-lg-6">
+                <img src="img/person.png" alt="person" class="image">
+            </div>
+        </div>
 
-<!--        <div class="row no-gutters slide3__extra">-->
-<!--            <div class="col-lg-2 offset-lg-2">-->
-<!--                <div class="extra3__picture">-->
-<!--                    <h3 class="picture3__header min-header">Winners</h3>-->
-<!--                    <img src="img/pic1.png" alt="winners" class="image">-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="col-lg-2">-->
-<!--                <div class="extra3__picture">-->
-<!--                    <h3 class="picture3__header min-header">Philosophy</h3>-->
-<!--                    <img src="img/pic2.png" alt="philosophy" class="image">-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="col-lg-2">-->
-<!--                <div class="extra3__picture">-->
-<!--                    <h3 class="picture3__header min-header">History</h3>-->
-<!--                    <img src="img/pic3.png" alt="history" class="image">-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
+        <div class="row no-gutters slide3__extra">
+            <div class="col-lg-2 offset-lg-2">
+                <div class="extra3__picture">
+                    <h3 class="picture3__header min-header">Winners</h3>
+                    <img src="img/pic1.png" alt="winners" class="image">
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div class="extra3__picture">
+                    <h3 class="picture3__header min-header">Philosophy</h3>
+                    <img src="img/pic2.png" alt="philosophy" class="image">
+                </div>
+            </div>
+            <div class="col-lg-2">
+                <div class="extra3__picture">
+                    <h3 class="picture3__header min-header">History</h3>
+                    <img src="img/pic3.png" alt="history" class="image">
+                </div>
+            </div>
+        </div>
+    </div>
 
-<!--    <div class="row slide slide4">-->
-<!--        <div class="map">-->
-<!--            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abf65e8fbcbb89ac81efae1037c588209e992784cdc5bd2740ebfa2dc6514f276&amp;width=90%25&amp;height=720&amp;lang=ru_RU&amp;scroll=true"></script>-->
-<!--        </div>-->
-<!--        <div class="col-lg-3 offset-lg-7">-->
-<!--            <div class="slide4__contacts">-->
-<!--                <a href="https://yandex.ru/maps/?um=constructor%3Abf65e8fbcbb89ac81efae1037c588209e992784cdc5bd2740ebfa2dc6514f276&source=constructorLink" class="contacts4__link">Pawia 5,31-154 Kraków, Polanrd</a>-->
-<!--                <a href="mailto:alyonium2.0@gmail.com" class="contacts4__link">alyonium2.0@gmail.com</a>-->
-<!--                <a href="tel: +79237506895" class="contacts4__link">+7 (923)-750-68-95</a>-->
-<!--                <button class="button-content contacts4__button button_blue">-->
-<!--                    <img src="img/behance.png" alt="behance" class="image">-->
-<!--                </button>-->
-<!--                <button class="button-content contacts4__button button_pink">-->
-<!--                    <img src="img/drible.png" alt="drible" class="image">-->
-<!--                </button>-->
-<!--                <button class="button-content contacts4__button">-->
-<!--                    <span class="button-text">Contact us</span>-->
-<!--                </button>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
+    <div class="row slide slide4">
+        <div class="map">
+            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abf65e8fbcbb89ac81efae1037c588209e992784cdc5bd2740ebfa2dc6514f276&amp;width=90%25&amp;height=720&amp;lang=ru_RU&amp;scroll=true"></script>
+        </div>
+        <div class="col-lg-3 offset-lg-7">
+            <div class="slide4__contacts">
+                <a href="https://yandex.ru/maps/?um=constructor%3Abf65e8fbcbb89ac81efae1037c588209e992784cdc5bd2740ebfa2dc6514f276&source=constructorLink" class="contacts4__link">Pawia 5,31-154 Kraków, Polanrd</a>
+                <a href="mailto:alyonium2.0@gmail.com" class="contacts4__link">alyonium2.0@gmail.com</a>
+                <a href="tel: +79237506895" class="contacts4__link">+7 (923)-750-68-95</a>
+                <button class="button-content contacts4__button button_blue">
+                    <img src="img/behance.png" alt="behance" class="image">
+                </button>
+                <button class="button-content contacts4__button button_pink">
+                    <img src="img/drible.png" alt="drible" class="image">
+                </button>
+                <button class="button-content contacts4__button">
+                    <span class="button-text">Contact us</span>
+                </button>
+            </div>
+        </div>
+    </div>
 
     <div class="row slide slide2">
+
         <div class="row slide2__header slide-header">
             <h2 class="offset-lg-5 mid-header">Selected works</h2>
         </div>
