--- a/index.html
+++ b/index.html
@@ -37,171 +37,264 @@
         </div>
     </nav>
 
-    <div class="row slide slide1">
-        <div class="row slide1__main">
-            <div class="col-lg-4 offset-lg-2 main__text">
-                         <h2 class="text1__header big-header">Your next interactive experience</h2>
-                         <button class="text1__button">
+        <ul class="nav-line">
+            <li data-slide="slide1" class="number-slide min-header number-active">01</li>
+            <li data-slide="slide2" class="number-slide min-header">02</li>
+            <li data-slide="slide3" class="number-slide min-header">03</li>
+            <li data-slide="slide4" class="number-slide min-header">04</li>
+            <li data-slide="slide5" class="number-slide min-header">05</li>
+        </ul>
+
+        <div class="row slide slide1">
+            <div class="row slide1__main">
+                <div class="col-lg-4 offset-lg-2 main__text">
+                    <h2 class="text1__header big-header">Your next interactive experience</h2>
+                    <button class="text1__button">
                             <span class="button-text button1__text button1__text_position">Hire us
                                 <svg class="text-svg" xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 8 8"> <path d="M5 0v2h-5v1h5v2l3-2.53-3-2.47z" transform="translate(0 1)" fill="#fff" /> </svg>
                             </span>
-                         </button>
-                     </div>
-            <div class="col-lg-6">
-                         <img src="img/bigAstronaut.png" alt="astronaut" class="">
-                     </div>
-        </div>
-        <div class="row slide1__extra">
-            <div class="col-lg-3 offset-lg-2">
-                        <div class="extra1__link">
-                            <h3 class="link1__header min-header">
-                                Metiew&Smith
-                            </h3>
-                            <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                            </p>
-                        </div>
+                    </button>
+                </div>
+                <div class="col-lg-6">
+                    <img src="img/bigAstronaut.png" alt="astronaut" class="">
+                </div>
+            </div>
+            <div class="row slide1__extra">
+                <div class="col-lg-3 offset-lg-2">
+                    <div class="extra1__link">
+                        <h3 class="link1__header min-header">
+                            Metiew&Smith
+                        </h3>
+                        <p class="description">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        </p>
                     </div>
-            <div class="col-lg-3">
-                <div class="extra1__link">
-                            <h3 class="link1__header min-header">
-                                Fantasy interactive
-                            </h3>
-                            <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                            </p>
-                        </div>
-            </div>
-            <div class="col-lg-3">
-                <div class="extra1__link">
-                    <h3 class="link1__header min-header">
-                                Paul&Shark
-                            </h3>
-                    <p class="description">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                            </p>
+                </div>
+                <div class="col-lg-3">
+                    <div class="extra1__link">
+                        <h3 class="link1__header min-header">
+                            Fantasy interactive
+                        </h3>
+                        <p class="description">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="extra1__link">
+                        <h3 class="link1__header min-header">
+                            Paul&Shark
+                        </h3>
+                        <p class="description">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="row slide slide2">
+        <div class="row slide slide2">
+            <div class="row slide2__header slide-header">
+                <h2 class="offset-lg-5 mid-header">Selected works</h2>
+            </div>
+            <div class="row slide2__slider">
 
-        <div class="row slide2__header slide-header">
-            <h2 class="offset-lg-5 mid-header">Selected works</h2>
-        </div>
+                <img src="img/left-arrow.png" alt="arrow" class="offset-lg-1 left-arrow">
 
-        <div class="row slide2__slider">
+                <div class="col-lg-9 slider">
 
-            <img src="img/left-arrow.png" alt="arrow" class="offset-lg-1 left-arrow">
+                    <div class="slider-slide">
+                        <img src="img/slider1.png" alt="slick" class="slider-image">
+                        <h3 class="min-header slider-header">Alex Turner</h3>
+                        <p class="description slider-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
+                    </div>
 
-            <div class="col-lg-9 slider">
+                    <div class="slider-slide">
+                        <img src="img/slider2.png" alt="slick" class="slider-image">
+                        <h3 class="min-header slider-header">Jaden Smith</h3>
+                        <p class="description slider-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
+                    </div>
 
-                <div class="slider-slide">
-                    <img src="img/slider1.png" alt="slick" class="slider-image">
-                    <h3 class="min-header slider-header">Alex Turner</h3>
-                    <p class="description slider-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
+                    <div class="slider-slide">
+                        <img src="img/slider3.png" alt="slick" class="slider-image">
+                        <h3 class="min-header slider-header">Michael Grow</h3>
+                        <p class="description slider-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
+                    </div>
+                    <div class="slider-slide">
+                        <img src="img/slider1.png" alt="slick" class="slider-image">
+                        <h3 class="min-header slider-header">Alex Turner</h3>
+                        <p class="description slider-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
+                    </div>
+
+                    <div class="slider-slide">
+                        <img src="img/slider2.png" alt="slick" class="slider-image">
+                        <h3 class="min-header slider-header">Jaden Smith</h3>
+                        <p class="description slider-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
+                    </div>
+
+                    <div class="slider-slide">
+                        <img src="img/slider3.png" alt="slick" class="slider-image">
+                        <h3 class="min-header slider-header">Michael Grow</h3>
+                        <p class="description slider-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
+                    </div>
+
                 </div>
 
-                <div class="slider-slide">
-                    <img src="img/slider2.png" alt="slick" class="slider-image">
-                    <h3 class="min-header slider-header">Jaden Smith</h3>
-                    <p class="description slider-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
-                </div>
-
-                <div class="slider-slide">
-                    <img src="img/slider3.png" alt="slick" class="slider-image">
-                    <h3 class="min-header slider-header">Michael Grow</h3>
-                    <p class="description slider-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
-                </div>
-                <div class="slider-slide">
-                    <img src="img/slider1.png" alt="slick" class="slider-image">
-                    <h3 class="min-header slider-header">Alex Turner</h3>
-                    <p class="description slider-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
-                </div>
-
-                <div class="slider-slide">
-                    <img src="img/slider2.png" alt="slick" class="slider-image">
-                    <h3 class="min-header slider-header">Jaden Smith</h3>
-                    <p class="description slider-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
-                </div>
-
-                <div class="slider-slide">
-                    <img src="img/slider3.png" alt="slick" class="slider-image">
-                    <h3 class="min-header slider-header">Michael Grow</h3>
-                    <p class="description slider-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
-                </div>
+                <img src="img/right-arrow.png" alt="arrow" class="right-arrow">
 
             </div>
-
-            <img src="img/right-arrow.png" alt="arrow" class="right-arrow">
-
         </div>
 
-    </div>
-
-    <div class="row slide slide3">
-        <div class="row slide3__main">
-            <div class="col-lg-4 offset-lg-2 main__text">
-                <h2 class="text3_header big-header">We<br>believe in passionate people</h2>
-                <span class="button-text button3__text">Career
+        <div class="row slide slide3">
+            <div class="row slide3__main">
+                <div class="col-lg-4 offset-lg-2 main__text">
+                    <h2 class="text3_header big-header">We<br>believe in passionate people</h2>
+                    <span class="button-text button3__text">Career
                         <svg class="button3__svg text-svg" xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 8 8"> <path d="M5 0v2h-5v1h5v2l3-2.53-3-2.47z" transform="translate(0 1)" fill="#fff" /> </svg>
                     </span>
+                </div>
+                <div class="col-lg-6">
+                    <img src="img/person.png" alt="person" class="">
+                </div>
             </div>
-            <div class="col-lg-6">
-                <img src="img/person.png" alt="person" class="">
+            <div class="row no-gutters slide3__extra">
+                <div class="col-lg-2 offset-lg-2">
+                    <div class="extra3__picture">
+                        <h3 class="picture3__header min-header">Winners</h3>
+                        <img src="img/pic1.png" alt="winners" class="">
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div class="extra3__picture">
+                        <h3 class="picture3__header min-header">Philosophy</h3>
+                        <img src="img/pic2.png" alt="philosophy" class="">
+                    </div>
+                </div>
+                <div class="col-lg-2">
+                    <div class="extra3__picture">
+                        <h3 class="picture3__header min-header">History</h3>
+                        <img src="img/pic3.png" alt="history" class="">
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div class="row no-gutters slide3__extra">
-            <div class="col-lg-2 offset-lg-2">
-                <div class="extra3__picture">
-                    <h3 class="picture3__header min-header">Winners</h3>
-                    <img src="img/pic1.png" alt="winners" class="">
-                </div>
+        <div class="row slide slide4">
+            <div class="row map">
+                <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abf65e8fbcbb89ac81efae1037c588209e992784cdc5bd2740ebfa2dc6514f276&amp;width=90%25&amp;height=720&amp;lang=ru_RU&amp;scroll=true"></script>
             </div>
-            <div class="col-lg-2">
-                <div class="extra3__picture">
-                    <h3 class="picture3__header min-header">Philosophy</h3>
-                    <img src="img/pic2.png" alt="philosophy" class="">
-                </div>
-            </div>
-            <div class="col-lg-2">
-                <div class="extra3__picture">
-                    <h3 class="picture3__header min-header">History</h3>
-                    <img src="img/pic3.png" alt="history" class="">
+            <div class="col-lg-3 offset-lg-7">
+                <div class="row slide4__contacts">
+                    <a href="https://yandex.ru/maps/?um=constructor%3Abf65e8fbcbb89ac81efae1037c588209e992784cdc5bd2740ebfa2dc6514f276&source=constructorLink" class="contacts4__link">Pawia 5,31-154 Kraków, Polanrd</a>
+                    <a href="mailto:alyonium2.0@gmail.com" class="contacts4__link">alyonium2.0@gmail.com</a>
+                    <a href="tel: +79237506895" class="contacts4__link">+7 (923)-750-68-95</a>
+                    <button class="button-content contacts4__button button_blue">
+                        <img src="img/behance.png" alt="behance" class="">
+                    </button>
+                    <button class="button-content contacts4__button button_pink">
+                        <img src="img/drible.png" alt="drible" class="">
+                    </button>
+                    <button class="button-content contacts4__button">
+                        <span class="button-text">Contact us</span>
+                    </button>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="row slide slide4">
-        <div class="map">
-            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abf65e8fbcbb89ac81efae1037c588209e992784cdc5bd2740ebfa2dc6514f276&amp;width=90%25&amp;height=720&amp;lang=ru_RU&amp;scroll=true"></script>
-        </div>
-        <div class="col-lg-3 offset-lg-7">
-            <div class="slide4__contacts">
-                <a href="https://yandex.ru/maps/?um=constructor%3Abf65e8fbcbb89ac81efae1037c588209e992784cdc5bd2740ebfa2dc6514f276&source=constructorLink" class="contacts4__link">Pawia 5,31-154 Kraków, Polanrd</a>
-                <a href="mailto:alyonium2.0@gmail.com" class="contacts4__link">alyonium2.0@gmail.com</a>
-                <a href="tel: +79237506895" class="contacts4__link">+7 (923)-750-68-95</a>
-                <button class="button-content contacts4__button button_blue">
-                    <img src="img/behance.png" alt="behance" class="">
-                </button>
-                <button class="button-content contacts4__button button_pink">
-                    <img src="img/drible.png" alt="drible" class="">
-                </button>
-                <button class="button-content contacts4__button">
-                    <span class="button-text">Contact us</span>
-                </button>
+        <div class="row slide slide5">
+            <div class="row slide5__header slide-header">
+                <h2 class="offset-lg-5 mid-header">You want us to do</h2>
             </div>
-        </div>
-    </div>
 
-    <div class="row slide slide5">
-        <div class="row slide-header">
-            <h2 class="offset-lg-5 mid-header">You want us to do</h2>
+            <div class="row w-100 align-items-center justify-content-center">
+                <div class="col-lg-3">
+                    <div class="checkbox">
+                        <p class="checkbox-header">
+                            App Design
+                        </p>
+                        <input type="checkbox" id="checkbox-app">
+                        <label for="checkbox-app">
+                        </label>
+                    </div>
+                </div>
+
+                <div class="col-lg-3">
+                    <div class="checkbox">
+                        <p class="checkbox-header">
+                            Graphic Design
+                        </p>
+                        <input type="checkbox" id="checkbox-graphic">
+                        <label for="checkbox-graphic">
+                        </label>
+                    </div>
+                </div>
+
+                <div class="col-lg-3">
+                    <div class="checkbox">
+                        <p class="checkbox-header">
+                            Motion Design
+                        </p>
+                        <input type="checkbox" id="checkbox-motion">
+                        <label for="checkbox-motion">
+                        </label>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="row w-100 align-items-center justify-content-center">
+                <div class="col-lg-3">
+                    <div class="checkbox">
+                        <p class="checkbox-header">
+                            UX Design
+                        </p>
+                        <input type="checkbox" id="checkbox-ux">
+                        <label for="checkbox-ux">
+                        </label>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="checkbox">
+                        <p class="checkbox-header">
+                            Web Design
+                        </p>
+                        <input type="checkbox" id="checkbox-web">
+                        <label for="checkbox-web">
+                        </label>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row w-100 align-items-center justify-content-center">
+                <div class="checkbox">
+                    <p class="checkbox-header">
+                        Marketing
+                    </p>
+                    <input type="checkbox" id="checkbox-marketing">
+                    <label for="checkbox-marketing">
+                    </label>
+                </div>
+            </div>
+
+            <form class="row w-100 align-items-center justify-content-center">
+
+                <div class="name">
+                    <input class="name-input" type="text" placeholder="Name" required>
+                </div>
+
+                <div class="mail">
+                    <input class="mail-input" name="email" type="email" placeholder="E-mail" required>
+                </div>
+
+                <div class="row w-100 align-items-center justify-content-center">
+                    <button class="button-content request-button">
+                        <span class="button-text">Send request</span>
+                    </button>
+                </div>
+
+            </form>
+
         </div>
-    </div>
 
 </div>
 
