--- a/index.html
+++ b/index.html
@@ -104,37 +104,25 @@
                 <div class="col-lg-9 slider">
 
                     <div class="slider-slide">
+                        <img src="img/slider3.png" alt="slick" class="slider-image">
+                        <h3 class="min-header slider-header">Depeche Mode</h3>
+                        <p class="description slider-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
+                    </div>
+                    <div class="slider-slide">
                         <img src="img/slider1.png" alt="slick" class="slider-image">
-                        <h3 class="min-header slider-header">Alex Turner</h3>
+                        <h3 class="min-header slider-header">Queen</h3>
+                        <p class="description slider-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
+                    </div>
+
+                    <div class="slider-slide">
+                        <img src="img/slider3.png" alt="slick" class="slider-image">
+                        <h3 class="min-header slider-header">Our Last Night</h3>
                         <p class="description slider-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
                     </div>
 
                     <div class="slider-slide">
                         <img src="img/slider2.png" alt="slick" class="slider-image">
                         <h3 class="min-header slider-header">Jaden Smith</h3>
-                        <p class="description slider-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
-                    </div>
-
-                    <div class="slider-slide">
-                        <img src="img/slider3.png" alt="slick" class="slider-image">
-                        <h3 class="min-header slider-header">Michael Grow</h3>
-                        <p class="description slider-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
-                    </div>
-                    <div class="slider-slide">
-                        <img src="img/slider1.png" alt="slick" class="slider-image">
-                        <h3 class="min-header slider-header">Alex Turner</h3>
-                        <p class="description slider-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
-                    </div>
-
-                    <div class="slider-slide">
-                        <img src="img/slider2.png" alt="slick" class="slider-image">
-                        <h3 class="min-header slider-header">Jaden Smith</h3>
-                        <p class="description slider-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
-                    </div>
-
-                    <div class="slider-slide">
-                        <img src="img/slider3.png" alt="slick" class="slider-image">
-                        <h3 class="min-header slider-header">Michael Grow</h3>
                         <p class="description slider-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
                     </div>
 
