--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li data-slide="slide5" class="number-slide min-header">05</li>
         </ul>
 
-        <div class="row slide slide1">
+        <div class="row slide slide1 slide-active animate__animated animate__fadeIn">
             <div class="row slide1__main">
                 <div class="col-lg-4 offset-lg-2 main__text">
                     <h2 class="text1__header big-header">Your next interactive experience</h2>
